# poetry-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
poetry_template/: __init__.py
